force-app/main/default/objects/Doctor__c/fields/Working_Day_End__c.field-meta.xml
<CustomField>
    <fullName>Working_Day_End__c</fullName>
    <formula>TIMEVALUE($CustomMetadata.Default_Workday_Setting__mdt.TimeTable_for_doctors.First_Shift_End__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working Day End</label>
    <type>Time</type>
</CustomField>