force-app/main/default/objects/Doctor__c/fields/Working_Day_Start__c.field-meta.xml
<CustomField>
    <fullName>Working_Day_Start__c</fullName>
    <formula>TIMEVALUE($CustomMetadata.Default_Workday_Setting__mdt.TimeTable_for_doctors.First_Shift_Start__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working Day Start</label>
    <type>Time</type>
</CustomField>